--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,5 +69,7 @@
     <string name="download_scheme_unsupported">This demo app only supports downloading http streams</string>
 
     <string name="download_ads_unsupported">IMA does not support offline ads</string>
+    <string name="transition">trans</string>
+    <string name="temp_desc">Greyhound divisively hello coldly wonderfully marginally far upon excluding.</string>
 
 </resources>
